New 2.4.0-SNAPSHOT version for master, working with ConnId 1.6.0.0